Corrected histogram stretching.

--- a/modules/gui/frontend/src/app/home/map/visParams/histogram.module.css
+++ b/modules/gui/frontend/src/app/home/map/visParams/histogram.module.css
@@ -8,6 +8,18 @@
     justify-content: center;
 }
 
+
+.cursorOverlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    cursor: ew-resize;
+    z-index: 100;
+    /*background-color: red;*/
+}
+
 .graph {
     pointer-events: none;
     position: relative;
